# baseview

./: Cargo.toml  README.md
src/: clipboard.rs  lib.rs  mouse_cursor.rs  window.rs
src/gl/: macos.rs  mod.rs  win.rs  x11.rs
src/iced/: advanced.rs  application.rs  error.rs  mod.rs  time.rs
src/iced/application/: timed.rs
src/iced/shell/: clipboard.rs  conversion.rs  mod.rs  proxy.rs  settings.rs  system.rs  window.rs
src/iced/shell/window/: state.rs
src/macos/: keyboard.rs  view.rs  window.rs
src/win/: drop_target.rs  hook.rs  keyboard.rs  window.rs
src/x11/: cursor.rs  event_loop.rs  visual_info.rs  window.rs
