[package]
name = "maolan-baseview"
version = "0.0.2"
authors = [
    "William Light <git@wrl.lhiaudio.com>",
    "Charles Saracco <crsaracco@gmail.com>",
    "Mirko Covizzi <mrkcvzz@gmail.com>",
    "Micah Johnston <micah@glowcoil.com>",
    "Billy Messenger <billydm@protonmail.com>",
    "Anton Lazarev <https://antonok.com>",
    "Joakim Frostegård <joakim.frostegard@gmail.com>",
    "Robbert van der Helm <mail@robbertvanderhelm.nl>",
]
description = "A low-level windowing system geared towards making audio plugin UIs"
keywords = ["gui", "windowing", "audio", "plugin"]
categories = ["gui"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maolan/baseview"
homepage = "https://maolan.github.io"
readme = "README.md"

[features]
default = [
  "app-builder",
  "wgpu",
  "tiny-skia",
  "crisp",
  "web-colors",
  "thread-pool",
  "x11",
]
opengl = ["uuid", "x11/glx"]
image = ["dep:image", "iced_widget/image"]
canvas = ["iced_widget/canvas"]
svg = ["iced_widget/svg"]
app-builder = []
wgpu = ["wgpu-bare", "iced_renderer/wgpu"]
wgpu-bare = ["iced_renderer/wgpu-bare"]
tiny-skia = ["iced_renderer/tiny-skia"]
thread-pool = ["iced_futures/thread-pool"]
web-colors = ["iced_renderer/web-colors"]
crisp = ["iced_core/crisp", "iced_widget/crisp"]
x11 = ["iced_renderer/x11", "window_clipboard/x11"]
rustanalyzer_opengl_workaround = []
advanced = []
debug = []
highlighter = []
sipper = []
smol = []
sysinfo = []
tokio = []
unconditional-rendering = []

[dependencies]
keyboard-types = { version = "0.6.1", default-features = false }
raw-window-handle = "0.5"
iced_debug = "0.14"
iced_program = "0.14"
iced_renderer = "0.14"
iced_widget = "0.14"
iced_futures = "0.14"
iced_core = "0.14"
iced_runtime = "0.14"
window_clipboard = { version = "0.5", default-features = false }
image = { version = "0.25", default-features = false, optional = true }
thiserror = "1.0"
tracing = "0.1"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
x11rb = { version = "0.13.0", features = ["cursor", "resource_manager", "allow-unsafe-code"] }
x11 = { version = "2.21", features = ["xlib", "xlib_xcb"] }
nix = { version = "0.31", features = ["poll"] }

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.8", features = ["libloaderapi", "winuser", "windef", "minwindef", "guiddef", "combaseapi", "wingdi", "errhandlingapi", "ole2", "oleidl", "shellapi", "winerror"] }
uuid = { version = "0.8", features = ["v4"], optional = true }

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.24.0"
core-foundation = "0.9.1"
objc = "0.2.7"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
rtrb = "0.2"
softbuffer = "0.3.4"

[lints.clippy]
missing-safety-doc = "allow"
